2004-06-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/Makefile.am (BUILT_SOURCES): Build fix.

2004-06-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* examples/canvas.scm: Update canvas module import.

	* gnome/gw/canvas-spec.scm: Bugfix: use 'gnome-canvas name for
	generating wrapset.

2004-06-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/canvas-spec.scm: New name (WAS: libgnomecanvas-spec.scm).

	* gnome/gw/Makefile.am: Drop `libgnome' from toplevel module name
	and -spec.scm file.

2004-05-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* examples/canvas.scm (main): Use more apt example text, use move
	and affine.

2004-05-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* examples/canvas.scm: New file.

	* libgnomecanvas/Makefile.am (SUBDIRS): Add examples.

2004-05-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ChangeLog: New file.
